# T2-Constrained-Delaunay-Triangulation

./: .gitignore  CMakeLists.txt  README.md  c_shape.cpp  fragment_shader.glsl  main.cpp  main.py  my_shape.cpp  rec_w_line.cpp  rectangle.cpp  test1.off
src/: CMakeLists.txt  HalfEdge.h  HalfEdge.py  HalfEdgeMesh.py  Mesh.h  Vertex.h  camera3.cpp  camera3.h  shader_m.h  vertex.py
